# App-SigVisualizer

./: .gitignore  LSL_sender.py  _BAK_ui_sigvisualizer.py  consolewidget.py  createUI.bat  datathread.py  main.py  paintwidget.py  pqtgraph_paintwidget.py  pyproject.toml  pyqtgraph_paintwidget.py  sigvisualizer.command  sigvisualizer.py  ui_sigvisualizer.py  ui_sigvisualizer.ui
.github/workflows/: build.yml
.kiro/steering/: product.md  structure.md  tech.md
openspec/: project.md
openspec/changes/add-multi-stream-plot-manager/: design.md  proposal.md  tasks.md
openspec/changes/add-multi-stream-plot-manager/specs/plotting/: spec.md
openspec/changes/add-plot-y-range-menu-controls/: design.md  proposal.md  tasks.md
openspec/changes/add-plot-y-range-menu-controls/specs/plotting/: spec.md
